Integrated Gemini API for generated personalized email response